<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/panel_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/driver_in_the_way_to_you"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/black"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/rider_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp" />


    <TextView
        android:id="@+id/driver_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/driver_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mobile_12345677"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
    android:id="@+id/car_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/car_number_34534"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/mybutton"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>